argocd/app/overseerr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 5050
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/name: overseerr
  sessionAffinity: None
  type: ClusterIP
