argocd/app/overseerr/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
#    dns.homelab.wojoinc.xyz/publish-external: "true"
    external-dns.alpha.kubernetes.io/target: wojoinc.xyz.
#    traefik.ingress.kubernetes.io/router.middlewares: media-forward-auth-all@kubernetescrd,media-forward-auth@kubernetescrd
  name: overseerr
spec:
  ingressClassName: traefik-external
  rules:
  - host: "TO_BE_FILLED"
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 5050
        path: /
        pathType: Prefix
  tls:
  - hosts: []
    secretName: overseerr-ingress-tls
